[package]
name = "rust_btc_wallet_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin ={version = "0.31.0", features = ["serde",  "std", "base64", "rand"]}
bip39 = { version = "2.0.0", features = ["rand"] }